feat: add detail tickets
